# neil9bailey-DIIaC-v1.3.0-Production-Ready-Code-Check-UI

./: .env  .env.example  .gitattributes  .gitignore  ADMIN_CONSOLE_USER_GUIDE.md  AGENTS.md  BASELINE_DRIFT_ASSESSMENT.md  BASELINE_STATUS_AND_FUTURE_ENHANCEMENTS.md  BEHAVIORAL_DELTA_REPORT.md  CHANGELOG.md  CHANGE_CONTROL_PROCESS.md  CONTINUATION_PROMPT_AND_STATUS_PROTOCOL.md  CONTRADICTION_REPORT.md  COPILOT_ENTRA_PRODUCTION_CHECKLIST.md  CUSTOMER_FORK_MODEL.md  CUSTOMER_RELEASE_AUDIT.md  DEPLOYMENT_VALIDATION_RUNBOOK.md  DIIAC_ARCHITECTURE_ALIGNMENT_REPORT.md  DIIAC_ARCHITECTURE_AND_CAPABILITIES_PICTURE.md  DIIAC_CAPABILITIES_MATRIX.md  DIIAC_CLEAN_BUILD_TEST_VALIDATION_GUIDE.md  DIIAC_CRYPTOGRAPHIC_SPEC.md  DIIAC_CURRENT_ARCHITECTURE_BLUEPRINT.md  DIIAC_KEY_VAULT_PLAN.md  DIIAC_PRODUCTION_READINESS_REPORT.md  DIIAC_REAL_WORLD_E2E_ASSURANCE_REPORT.md  DIIAC_SALES_CASE_AND_TEST_EVIDENCE.md  DIIAC_SECURITY_CLOUD_E2E_ASSURANCE_REPORT.md  DIIAC_UI_WORKFLOW_GUIDE.md  DIIAC_V1_2_0_COMPREHENSIVE_BRIEFING.md  DIIAC_VISUAL_WORKFLOW_DIAGRAM.md  DIIAC_VS_LLM_NATIVE_COMPARISON.md  Dockerfile.runtime  ENTRA_ID_SETUP_GUIDE.md  GETTING_STARTED.md  GOVERNANCE_EXTENSIONS_V1_SPEC.md  HANDOFF.md  IMPLEMENTATION_CLOSURE_MATRIX.md  KEY_VAULT_TRANSITION.md  LICENSE  (+31 more)
.github/workflows/: ci.yml  docker-build.yml  replay-gate.yml  security.yml
Frontend/: .dockerignore  .env  .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Frontend/src/: AdminConsolePanel.tsx  AdminOpsDashboard.tsx  App.css  App.tsx  AppContext.tsx  DerivedCompliancePanel.tsx  GovernanceMetadataPanel.tsx  GovernedCtoStrategy.tsx  GovernedReportViewer.tsx  HumanInputPanel.tsx  ImpactViewer.tsx  MultiRoleGovernedCompilePanel.tsx  OperationalDashboard.tsx  PolicyDiffViewer.tsx  TrustDashboard.tsx  api.ts  auth.ts  index.css  main.tsx  vite-env.d.ts
backend-ui-bridge/: .env.example  Dockerfile  package-lock.json  package.json  server.js
backend-ui-bridge/auth/: entra.js  entra.test.js  rbac.js  rbac.test.js
backend-ui-bridge/lib/: crypto.js  crypto.test.js  ledger.js  ledger.test.js  logger.js  logger.test.js
backend-ui-bridge/llm-ingestion/: ingestRouter.js  store.js
backend-ui-bridge/middleware/: correlation.js  correlation.test.js
contracts/business-profiles/: finance_profile_v1.json  healthcare_profile_v1.json  it_enterprise_profile_v1.json  it_service_provider_profile_v1.json  national_highways_profile_v1.json  national_rail_profile_v1.json  tfl_profile_v1.json  transport_profile_v1.json
contracts/keys/: public_keys.json
deploy/kubernetes/: README.md  (+7 more)
docs/: ARCHITECTURE_BLUEPRINT_v1.2.0.md  DIIaC_v1.2.0_Feature_Documentation.md  README.md  VENDORLOGIC_DEPLOYMENT_GUIDE.md  VENDORLOGIC_LOCAL_STAGING_GUIDE.md
infra/: main.bicep  main.bicepparam
scripts/: build-push-dedicated-ui-images.sh  check_config_drift.js  deploy-azure-dedicated-ui.sh  deploy-azure.sh  entra-token-test.mjs  gen_signing_key.py  generate-test-token.mjs  prepare-customer-release.sh  production-readiness-check.sh  pull-keyvault-secrets.ps1  pull-keyvault-secrets.sh  recover_docker_buildkit.ps1  run-isolated-staging-validation.ps1  verify_decision_pack.js
tests/: test_admin_console.py  test_golden_exports.py  test_negative_fixtures.py  test_persistence.py  test_wave2_parity_contracts.py  test_wave3_accountability.py
tools/: verify-ledger.js  verify-replay-batch.js
(+398 files in other folders)
