[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "diiac-runtime"
version = "1.2.0"
description = "DIIaC — Deterministic Infrastructure Intelligence as Code governance runtime"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "governance",
    "deterministic",
    "infrastructure",
    "assurance",
    "merkle",
    "audit",
    "compliance",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "Flask==3.1.0",
    "cryptography==44.0.1",
    "Werkzeug==3.1.3",
    "click==8.1.8",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "cffi==1.17.1",
    "pycparser==2.22",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "httpx==0.28.1",
    "ruff==0.9.7",
    "mypy==1.14.1",
    "types-requests==2.32.0.20241016",
    "pip-audit==2.8.0",
]
test = [
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
]

[project.urls]
Homepage = "https://github.com/neil9bailey/DIIaC-v1.2.0-Production-Ready-Code-Check"
Documentation = "https://github.com/neil9bailey/DIIaC-v1.2.0-Production-Ready-Code-Check/blob/main/README.md"
Changelog = "https://github.com/neil9bailey/DIIaC-v1.2.0-Production-Ready-Code-Check/blob/main/CHANGELOG.md"
"Security Policy" = "https://github.com/neil9bailey/DIIaC-v1.2.0-Production-Ready-Code-Check/blob/main/SECURITY.md"

[project.scripts]
diiac-runtime = "app:create_app"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["contracts*", "scripts*"]

# ── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 130
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "node_modules",
    "Frontend",
    "backend-ui-bridge",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = [
    "S101",   # assert statements — used in tests
    "S603",   # subprocess — intentional in scripts
    "B008",   # function call in default argument — Flask pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]
"scripts*" = ["S", "B"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "scripts*", "venv/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["Frontend/", "backend-ui-bridge/", "scripts/"]
